--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Built with Jekyll 3.2.0
 
 # Setup
-title:               Ed.
-tagline:             'A Jekyll theme for minimal editions'
-description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
-url:                 'http://elotroalex.github.io'
-baseurl:             '/ed'
+title:               پی‌نوشت
+tagline:             'تراوشات ذهنی من'
+description:         'اینجا دربراه‌ی مسائل کاری و شخصی که حس می‌کنم برای بقیه هم مفید هست می‌نویسم.'
+url:                 'http://py4.ir'
+baseurl:             '/blog'
 
 # About/contact
 author:
-  name:              Alex Gil
-  url:               https://twitter.com/elotroalex
-  email:             colibri.alex@gmail.com
+  name:              Pooya Moradi
+  url:               https://twitter.com/ibtkm
+  email:             mo.pooya@gmail.com
 
 # Permalinks
 
